# tas

./: ActuatorMessage.h  CMakeLists.txt  DynamicsPlugin.h  Notes  README.md  TAS.h  actuator.h  controller.cpp  coordinator.cpp  cpu.h  dynamics.cpp  dynamics_plugin.h  log.h  moby_driver.cpp  planner.cpp  plugin.cpp  proto_threading.cpp  tas.h  ut_controllerexec.cpp  ut_controllerticking.cpp  ut_controllertiming.cpp
cmake_modules/: FindGazebo.cmake  FindMoby.cmake  FindODE.cmake
commandbuffer/: DynamicsPlugin.h  controller.cpp  coordinator.cpp  dynamics.cpp
commandbuffer/example/: CMakeLists.txt  shm_client.cpp
examples/: CMakeLists.txt
examples/holonomic/: CMakeLists.txt  aabb.h  actuator.h  channel.h  command.cpp  command.h  common.h  constants.h  control_sampler.h  control_space.h  controller.cpp  controller.h  coordinator.cpp  cp.h  cpu.cpp  cpu.h  dynamics.cpp  dynamics.h  error.cpp  error.h  ipc.h  log.cpp  log.h  maze.h  memory.h  message.h  notes  os.cpp  os.h  plane.h  planner.cpp  planner.h  plugin_dynamics.cpp  proc_controller.cpp  proc_planner.cpp  pursuit.xml  schedule.h  sensor.h  ship.cpp  ship.h  (+12 more)
examples/pendulum/: CMakeLists.txt  controller.cpp  coordinator.cpp  dynamics.cpp
examples/pursuit/: CMakeLists.txt  channels.h  coordinator.cpp  cpu.cpp  cpu.h  dynamics.cpp  dynamics.h  log.cpp  log.h  message.cpp  message.h  notification.h  os.cpp  os.h  osthread.cpp  osthread.h  processor.cpp  processor.h  scheduler.cpp  scheduler.h  tcs.h  thread.h  thread_heap.cpp  thread_heap.h  time.cpp  time.h  timer.cpp  timer.h  timesink.cpp  timesink.h  types.h
examples/pursuit/test/: CMakeLists.txt  client_process.cpp  test_client.cpp  test_coordinator.cpp  test_heap.cpp  test_log.cpp  test_timer.cpp
gazebo/: CMakeLists.txt
gazebo/holonomic/: CMakeLists.txt  aabb.h  command.h  common.h  constants.h  control_sampler.h  control_space.h  controller.h  directed_control_sampler.h  goal.h  integrator.h  maze.h  plane.h  planner.h  pursuit.world  setup.sh  ship.cpp  ship.h  ship.world  space.cpp  space.h  state.h  state_propagator.h  utilities.h
gazebo/holonomic/models/maze/: model.config
gazebo/holonomic/models/predator/: model.config  model.sdf
gazebo/holonomic/models/prey/: model.sdf
gazebo/holonomic/models/ship/: model.config  model.sdf
gazebo/holonomic/models/space/: model.config  model.sdf
gazebo/pendulum/: CMakeLists.txt  README  pendulum.world  pendulum_standup_controller.cpp  pendulum_standup_controller.h  setup.sh
gazebo/pendulum/models/simple_pendulum/: model.config  model.sdf
gazebo/pendulum/models/standup_pendulum/: model.config  model.sdf
gazebo/pursuit/: .car.cpp.swp  .car.h.swp  CMakeLists.txt  car.cpp  car.h  car.world  predator.cpp  predator.h  prey.cpp  prey.h  prey.world  pursuit.world  unbounded_prey.world  unbounded_pursuit.world
gazebo/pursuit/models/car/: .model.sdf.swp  model.config  model.sdf
gazebo/pursuit/models/pen/: model.config  (+1 more)
include/tas/: actuator.h  cpu.h  dynamics_plugin.h  error.h  experiment.h  ipc.h  log.h  os.h  schedule.h  tas.h  thread.h  time.h
mutex/: Buffer.h  CMakeLists.txt  proc1.cpp  proc2.cpp
ode/: CMakeLists.txt  demo_ode.cpp  tas_pen.cpp
ros/: Notes
ros/catkin/devel/: .catkin  .rosinstall  _setup_util.py  env.sh  setup.bash  setup.sh  setup.zsh
ros/catkin/install/: .rosinstall  _setup_util.py  env.sh  setup.bash  setup.sh  setup.zsh
ros/catkin/install/share/pendulum/: package.xml
ros/catkin/install/share/pendulum/cmake/: pendulum-msg-paths.cmake  pendulumConfig.cmake
ros/catkin/install/share/pendulum/msg/: command.msg  synch.msg
ros/catkin/install/share/pendulum/srv/: state.srv
ros/catkin/src/pendulum/: CMakeLists.txt
ros/catkin/src/pendulum/gazebo/: CMakeLists.txt  my.world  pendulum_standup_controller.cpp  ros_model_plugin.cc  rpc.world
ros/catkin/src/pendulum/gazebo/models/ros_pendulum/: model.config
ros/catkin/src/pendulum/gazebo/models/ros_rpc_pendulum/: model.config  model.sdf
ros/catkin/src/pendulum/msg/: state.msg
ros/catkin/src/pendulum/src/: .rpc_gazebo_robot.cpp.swp  .rpc_standup_controller.cpp.swp  command_listener.cpp  command_talker.cpp  gazebo_robot.cpp  ros_model_plugin.cc  ros_pendulum_client.cpp  ros_pendulum_plugin.cc  ros_pendulum_standup_controller.cpp  rpc_gazebo_robot.cpp  rpc_standup_controller.cpp  standup_controller.cpp
ros/catkin/src/pendulum/srv/: rpc_command.srv
testing/: Options.h  cputest.cpp  inverted-pendulum-pd-controller.cpp  tickspersec.cpp
testing/commandbuffer/: CMakeLists.txt  CommandBuffer.h  DynamicsPlugin.h  commandbuffer_client.cpp  commandbuffer_server.cpp  controller.cpp  coordinator.cpp  dynamics.cpp
testing/commandbuffer/example/: shm_server.cpp
testing/dubins_car_2/: command_plotting  command_plotting.m  command_plotting.m~  command_plotting_2  command_plotting_2.m  double_four_bar.m  draw_car.m  dubins_FK.m  dubins_IK.m  dubins_car.m  import_commandfile.m  import_commands.m  import_statefile.m  kingpin_angle.m  lissajous.m  matlab_workspace.mat  plot_command_angle.m  plot_command_audit  plot_command_audit.m  plot_command_file.m  plot_command_speed.m  plot_commands.m  plot_commandset.m  plot_plannedstate.m  plot_predator_commands.m  plot_state_audit.m  process_command_data.m  signed_angle.m  state_plotting.m  state_plotting_2.m  steering_direct_vs_fourbar_control.m  steering_direct_vs_fourbar_state.m  steeringdoublefourbar.m  steeringdoublefourbar_solver.m  untitled.fig
testing/include/: CMakeLists.txt  CubicSpline.h  Moby.h  Trajectory.h
testing/matlab/: pendulum.m  position.m  trajectories.m  velocity.m
testing/proto/: moby_driver.cpp  proto_sim.cpp  ut_controllerschedule.cpp  ut_controllertiming.cpp
testing/src/: CMakeLists.txt  CubicSpline.cpp  Trajectory.cpp
testing/timing/: CMakeLists.txt  Notes  actuatormessage_test.cpp  coordinator.cpp  dynamics.cpp  monitor.cpp  thread_test.cpp
testing/unittest/: CMakeLists.txt  cpuinfo.cpp  pdtrajectories.cpp
timing/: ActuatorMessage.h  CMakeLists.txt  DynamicsPlugin.h  controller.cpp  coordinator.cpp  dynamics.cpp  priority_test.cpp  thread_test.cpp
(+47 files in other folders)
