<?xml version="1.0"?>
<package>
  <name>pendulum</name>
  <version>0.0.0</version>
  <description>The pendulum package</description>

  <maintainer email="jrt@gwu.edu">james</maintainer>
  <license>BSD</license>
  <url type="repository">http://github.com/semajrolyat/tas</url> -->
  <author email="jrt@gwu.edu">James R. Taylor</author> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>

  </export>
</package>
